# twitter-api

./: LICENSE  README.md  alembic.ini  build.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 42e87632b0fb_added_post_tag_and_associated_table.py  6163671c0698_added_post_tag_and_associated_table.py  6a120611501e_created_user_model.py  dabc3c4ebca1_added_post_tag_and_associated_table.py
app/: main.py  starter.ipynb
tests/: conftest.py  test_posts.py  test_user_endpoints.py
tests/utils/: __init__.py  helpers.py
user_service/: main.py
user_service/api/: __init__.py  dependencies.py
user_service/api/api_v1/: api.py
user_service/api/api_v1/endpoints/: posts.py  tags.py  users.py
user_service/core/: constants.py  security.py
user_service/core/db/: __init__.py  base.py  db_conf.py
user_service/core/errors/: __init__.py  forbidden.py  resource_not_found.py  unauthorized.py
user_service/core/orm/: timestamp_mixin.py
user_service/crud/: __init__.py  base.py  crud_post.py  crud_tag.py  crud_user.py
user_service/models/: __init__.py  post_tag_association.py  saved_post.py  tag.py  user.py
user_service/schemas/: __init__.py  post.py  tag.py  user.py
